2009-05-15  John W. Eaton  <jwe@octave.org>

	* general/nargchk.m: Don't generate error if output is struct.
	Uncomment some additional tests.
	From Alois Schloegl <alois.schloegl@tugraz.at>

2009-05-14  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: Import the step adaptation strategy
	improvements from fsolve.

2009-05-08  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Add feature "key_has_font_properties".
	* plot/__go_draw_axes__.m: Have legend inherit the axis font-name/size.

2009-05-04  Peter O'Gorman  <pogma@thewrittenword.com>

	* miscellaneous/tar.m, miscellaneous/unpack.m:
	Pass "xvf" to tar instead of "-x -v -f".

2009-04-30  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Change version for 
	"x11_figure_position", >4.2.4 to >=4.3.0.

2009-04-30  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: For figure position, treat 'wxt' as 'x11'.

2009-04-30  Jaroslav Hajek <highegg@gmail.com>

	* statistics/base/range.m: Fix behavior when dim is specified.

2009-04-28  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Fix typo: 'gswin23c' -> 'gswin32c'. Suppress stderr
	when printing. New sub-function: fix_eps_bbox(). Add option, "-tight",
	to replace the gnuplot bbox with a tight bbox for eps-files.

2009-04-23  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Use Ghostscript rather than ImageMagick's 'convert'.
	Support printing to non-postscript printers. Do not change the output
	filename when using Ghostscript. When using lpr to print the output,
	send it without filtering (unix), or as if it were binary (pc).

2009-04-22  Robert T. Short  <octave@phaselockedsystems.com>

	* general/isa.m: Correctly report multiple layers of class hierarchy.

2009-04-20  John W. Eaton  <jwe@octave.org>

	* special-matrix/vander.m: Update tests.

2009-04-20  Jaroslav Hajek  <highegg@gmail.com>

	* special-matrix/vander.m: Allow second argument.
	* special-matrix/polyfit.m: Simplify.
