@@ -199,6 +199,8 @@ function [x, fval, info, output, grad, hess] = fminunc (fcn, x0, options = struc
     endif
 
     suc = false;
+    decfac = 0.5;
+
     ## Inner loop.
     while (! suc && niter <= maxiter && nfev < maxfev && ! info)
 
@@ -231,8 +233,9 @@ function [x, fval, info, output, grad, hess] = fminunc (fcn, x0, options = struc
       endif
 
       ## Update delta.
-      if (ratio < min(max(0.1, lastratio), 0.9))
-        delta *= 0.5;
+      if (ratio < min(max(0.1, 0.8*lastratio), 0.9))
+        delta *= decfac;
+        decfac ^= 1.4142;
         if (delta <= 1e1*macheps*xn)
           ## Trust region became uselessly small.
           info = -3;
@@ -240,10 +243,11 @@ function [x, fval, info, output, grad, hess] = fminunc (fcn, x0, options = struc
         endif
       else
         lastratio = ratio;
+        decfac = 0.5;
         if (abs (1-ratio) <= 0.1)
-          delta = 2*sn;
+          delta = 1.4142*sn;
         elseif (ratio >= 0.5)
-          delta = max (delta, 2*sn);
+          delta = max (delta, 1.4142*sn);
         endif
       endif
 
