@@ -1,3 +1,8 @@
+2009-05-17  Jaroslav Hajek  <highegg@gmail.com>
+
+	* optimization/fminunc.m: Improve TR updating strategy.
+	* optimization/fsolve.m: Ditto.
+
 2009-05-15  John W. Eaton  <jwe@octave.org>
 
 	* general/nargchk.m: Don't generate error if output is struct.
